--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 0;
+    padding: 10px 20px;
     border-right: 1px solid #202225;
 }
 
@@ -213,15 +213,12 @@ body {
     padding: 10px;
 }
 
-.chat-area-expanded {
-    padding-left: 20px;
-}
+
 
 .message {
-    display: flex;
     align-items: start;
     margin-bottom: 10px;
-    margin-left: 0;
+    margin-left: -25px;
 }
 
 .message-avatar {
